# acrow

./: App.tsx  README.md  app.json  environment.d.ts  package.json
program/: Cargo.toml
program/src/: lib.rs
src/navigation/: index.tsx  root.tsx
src/screens/: dashboard.tsx  logout.tsx
src/shared/: config.ts
src/utils/: balance.ts  connection.ts  program.ts  programInfo.ts  test.ts
