cargo-features = ["edition2021"]

[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.5"
borsh = "0.9.1"
borsh-derive = "0.9.1"

[dev-dependencies]
solana-program-test = "1.8.5"
solana-sdk = "1.8.5"

[lib]
crate-type = ["cdylib", "lib"]